apps/wevote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wevote-ingress
  namespace: wevote
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wevote.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wevoteserver
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 3000
